--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,6 @@
         "string_view": "cpp",
         "random": "cpp"
     },
-    "code-runner.runInTerminal": true
+    "code-runner.runInTerminal": true,
     
 }
